<resources>
    <string name="app_name" translatable="false">Mariah Carey Lyrics</string>
    <string name="albums_activity_label">Albums</string>
    <string name="songs_count_end_label">%d songs</string>
    <string name="information_label">Information</string>
    <string name="information_dialog_body_text">This application was made with the primary purpose of collecting the lyrics of the songs contained in the studio albums released by one of the most successful artists of all times, inducted by the Songwriters Hall of Fame in the year 2022, Mariah Carey. There is no copyright infringement intended with the realization of this app and that is why the names of the recording studios in charge of the production of every album and the names of the authors of the songs (according to Wikipedia and/or Google) can be found in the information menu of the albums or the songs.\n\nThe links provided by this app to the songs listed in here were found during a quick search on YouTube and not all of them were extracted from the official channel of Mariah Carey. Use them at your own risk.\n\nThis app comes with no warranty and it is distributed \"as is\". You are the only responsible of the use you make of this application and its author will not take any responsibilities for any kind of damage caused by its usage. This app and its creator have no relation with any of the video publishers, the authors of the songs or any of the recording labels hereby listed. This application does not collect any kind of personal information of its users. You can also collaborate with the development of this project because it is open sourced and hosted in GitHub.\n\n;) enjoy the app!</string>
    <string name="version_label">Version 1.0</string>
    <string name="view_code_label">View the source code</string>
    <string name="data_sources_label">Data sources</string>
    <string name="wikipedia_label">Wikipedia</string>
    <string name="wikipedia_description_label">Here is where you can find all the data about the albums used to make this application</string>
    <string name="deviantart_label">Deviantart</string>
    <string name="deviantart_description_label">Here is where you can find the font and the iconic Mariah Carey logo used in this application</string>
    <string name="label_more">More</string>
    <string name="follow_mc_label">Follow Mariah Carey</string>
    <string name="play_label">Play</string>
    <string name="google_label">Google</string>
    <string name="checking_database_label">Checking database</string>
    <string name="transferring_database_label">Transferring database</string>
    <string name="database_transferred_label">Database transferred</string>
    <string name="checking_db_integrity_label">Checking database integrity</string>
    <string name="replacing_database_label">Replacing database</string>
    <string name="database_replaced_label">Database replaced</string>
    <string name="made_in_cuba_label">Made with ♡ in Cuba</string>
</resources>